plugins {
    id 'application'
    id 'io.github.qishr.cascara-meta.java-library' version '0.1.0'
    id "io.github.qishr.cascara-meta.publish" version "0.1.0"
    id("org.openjfx.javafxplugin") version "0.1.0"

    id 'com.gradleup.shadow' version '9.3.0'
    id("org.panteleyev.jpackageplugin") version "2.0.1"
}

import org.gradle.internal.os.OperatingSystem

def os = OperatingSystem.current()

jpackage {
    appName = 'cascara-ui-demo'
    mainClass = 'io.github.qishr.cascara.ui.demo.Launcher'
    version = '1.0.0'

    destination = file("$buildDir/jpackage")
    input = file("$buildDir/libs")
    mainJar = 'cascara-ui-demo-1.0.0-all.jar'

    type = os.isWindows() ? "msi" :
           os.isLinux()   ? "deb" :
                            "pkg"   // macOS (choose whatever your jpackage supports; "pkg" is the usual pick)

    // Optional: where jpackage picks the right launcher/paths
    // jvmArgs = []
}






project(":cascara-ui-demo") {
    tasks.named("jpackage", org.panteleyev.jpackage.JPackageTask) {
        destination = file("$buildDir/jpackage")
    }
}

// javaLauncher = javaToolchains.launcherFor {
//     languageVersion = JavaLanguageVersion.of(25)
// }

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation(platform("io.github.qishr:cascara-meta-bom:0.1.12"))

    implementation(project(":cascara-ui"))

    // JUnit 5 (versions from BOM)
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testImplementation 'org.junit.jupiter:junit-jupiter-params'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Mockito (versions from BOM)
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'

    // Cascara modules
    implementation "io.github.qishr:cascara-common"
    implementation "io.github.qishr:cascara-common-io"
    implementation "io.github.qishr:cascara-lang-json"
    implementation "io.github.qishr:cascara-lang-xml"
    implementation "io.github.qishr:cascara-lang-yaml"
    implementation "io.github.qishr:cascara-schema"
}


java {
   sourceCompatibility = '25'
}



javafx {
    version = "25"
    modules = [ 'javafx.controls', 'javafx.graphics' ]
}


application {
    mainClass.set("io.github.qishr.cascara.ui.demo.Launcher")
    mainModule.set("cascara.ui.demo")
    // applicationDefaultJvmArgs = ['--add-reads', 'cascara.ui=ALL-UNNAMED']
}


// jar {
//     manifest {
//         attributes 'Main-Class': 'io.github.qishr.cascara.ui.demo.Launcher'
//     }
//     from {
//         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
//     }
// }



tasks.withType(JavaExec) {
    jvmArgs = ['--enable-native-access=javafx.graphics']
}


// tasks.named('run', JavaExec) {
//     if (project.hasProperty('excludeMacos')) {

//         def macosFilter = { file ->
//             !file.name.contains('cascara.macos.menus') && !file.name.contains('nsmenufx')
//         }

//         classpath = classpath.filter(macosFilter)

//         // Note: We avoid referencing 'modulePath' directly, as its public availability is unreliable.
//         // Filtering the classpath is sufficient to remove the JARs from the runtime environment,
//         // which prevents both native hooks and the ServiceLoader from finding them.

//         println("INFO: macOS module and nsmenufx successfully removed from run classpath/modulepath.")
//     }
// }


tasks.withType(Javadoc).configureEach {
    options.addStringOption('Xdoclint:-missing', '-quiet')
}
